--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
